--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -47,7 +47,7 @@
                     <div class="chief d-flex flex-row" *ngIf="item.chief">
                       <i class="bi bi-person-badge"></i>
                       <label class="form-check-label ms-2">
-                        - Trưởng phòng
+                        - Trưởng đoàn
                       </label>
                     </div>
                   </div>
