fix auth and css

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
         <li
           class="p-2 rounded"
           routerLinkActive="active"
-          *ngIf="isDirector || isPrincipal"
+          *ngIf="isDirector || isPrincipal || isViceDirector"
         >
           <a class="" [routerLink]="['/school-initiation-plan']">
             <div>
