fix css dashboard, disable filter by numeric

--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,6 +1,9 @@
 @import "../../../assets/scss/base";
 .searchbar {
     .search {
+        label {
+            color: $primary;
+        }
         input {
             width: 600px;
             border-radius: 40px;
