--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,5 +1,8 @@
-<div class="row searchbar mb-2">
+<div class="row searchbar mb-2 container-fluid">
   <div class="col-md-6 search">
+    <!-- <label class="fw-medium fs-3">
+      Hệ thống Quản lý cấp Quận các Trường Mầm Non
+    </label> -->
   </div>
   <div
     class="col-md-6 d-flex flex-row justify-content-end align-items-center top-nav"
