--- a/src/app/features/post-login/inspection/record/update-record/update-record.component.html
+++ b/src/app/features/post-login/inspection/record/update-record/update-record.component.html
@@ -82,10 +82,17 @@
       </div>
       <div class="record-assignee col-md-6 mt-1" *ngIf="inspectionPlan">
         <label class="fw-medium">Người thực hiện<span class="p-error">*</span></label>
-        <p-dropdown class="full-width-dropdown" [options]="inspectionPlan.inspectors" formControlName="assigneeId"
+        <p-dropdown class="full-width-dropdown" [options]="inspectionPlan.inspectors"
+                    appendTo="body"
+                    formControlName="assigneeId"
                     optionLabel="user.fullName"
                     [filter]="true" filterBy="user.fullName" optionValue="accountId" [showClear]="true"
                     placeholder="Chọn người thực hiện">
+          <ng-template pTemplate="option" let-option>
+            <label>{{ option.user.fullName }}</label>
+            <br>
+            <span class="dropdown-email-span">{{ option.email }}</span>
+          </ng-template>
         </p-dropdown>
         <div
           *ngIf="recordForm.controls?.['assigneeId']?.invalid && (recordForm.controls?.['assigneeId']?.touched ||recordForm.controls?.['assigneeId']?.dirty)">
