--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -61,7 +61,7 @@
           <a class="" [routerLink]="['/create-template']">
             <div>
               <i class="bi bi-folder-plus"></i>
-              &nbsp; Tạo mẫu công việc
+              &nbsp; Tạo mẫu cây công việc
             </div>
           </a>
         </li>
