--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -98,7 +98,7 @@
     key="confirm"
   ></p-confirmDialog>
   <h5 class="mat-headline-5 fw-medium">
-    Tạo mẫu công việc cho các trường mầm non
+    Tạo mẫu cây công việc cho các trường mầm non
   </h5>
   <div class="card">
     <p-treeTable
@@ -181,7 +181,7 @@
             pButton
             (click)="sendToSchools()"
           >
-            Gửi mẫu công việc
+            Gửi mẫu cây công việc
           </button>
         </div>
       </ng-template>
