--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,8 +1,8 @@
 <div class="row searchbar mb-2 container-fluid">
   <div class="col-md-6 search">
-    <!-- <label class="fw-medium fs-3">
+   <label class="fw-medium fs-4">
       Hệ thống Quản lý cấp Quận các Trường Mầm Non
-    </label> -->
+    </label>
   </div>
   <div
     class="col-md-6 d-flex flex-row justify-content-end align-items-center top-nav"
